[package]
name = "roadiebrodie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
anyhow = "1.0.75"

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]

[dependencies.mongodb]
version = "2.7.0"
default-features = false
features = ["sync"]
